apps/vikunja/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:0.24.4
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: files
              mountPath: /app/vikunja/files
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: vikunja-files-pvc
