apps/vikunja/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: apps
spec:
  selector:
    app: vikunja
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3456
  type: ClusterIP
