apps/vikunja/05-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: apps-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: v.progist.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 80
  tls:
    - hosts:
        - v.progist.ru
      secretName: vikunja-public-tls
